--- a/css/board.css
+++ b/css/board.css
@@ -1,14 +1,17 @@
 ﻿.departure-designation {
     border-radius: 4px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgba(255,255,255,0.5);
     text-align: center;
     min-width: 40px;
     margin: 2px;
 }
 
-    .departure-designation span {
-        padding-left: 5px;
-        padding-right: 5px;
-    }
+.departure-designation span {
+    padding-left: 5px;
+    padding-right: 5px;
+}
 
 .departure-table td:nth-child(-n+2) {
     min-width: 40px !important;
